add extra tasks
